--- a/views/news2.erb
+++ b/views/news2.erb
@@ -33,7 +33,11 @@
     <% end %>
   </ul>
   
-
+ #<ul>
+ #   <% for x in @headlines %>
+ #     <li><%= x %></li>
+ #   <% end %>
+ # </ul>
     </div>
 
     <!-- Optional JavaScript -->
