--- a/views/news.erb
+++ b/views/news.erb
@@ -32,7 +32,11 @@
       <li><%= x %></li>
     <% end %>
   </ul>
-  
+  <ul>
+    <% for x in @headlines %>
+      <li><%= x %></li>
+    <% end %>
+  </ul>
 
     </div>
 
