--- a/views/news.erb
+++ b/views/news.erb
@@ -23,7 +23,7 @@
   <body>
 
     <div class="container mt-5">
-      <h1>Weather</h1>
+      <h1>Weather of <%= @location %> </h1>
   <h2> The current temperature is <%=@current_temperature%> with <%=@conditions%> conditions</h2>
    <h3> Weather Forecast </h3>
   
