--- a/views/news.erb
+++ b/views/news.erb
@@ -21,17 +21,23 @@
     <title>News</title>
   </head>
   <body>
-
+<div class="container mt-6">
+<h1>Weather of <%= @location %> </h1>
+<div>
     <div class="container mt-5">
-      <h1>Weather of <%= @location %> </h1>
+      
   <h2> The current temperature is <%=@current_temperature%> with <%=@conditions%> conditions</h2>
-   <h3> Weather Forecast </h3>
+   <h3> 8-day Weather Forecast </h3>
   
    <ul>
     <% for x in @future %>
       <li><%= x %></li>
     <% end %>
   </ul>
+  <div>
+
+<div class="container mt-5">
+  <h3> Get the News! </h3>
   <ul>
     <% for x in @headlines %>
       <li><%= x %></li>
